<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/top"
        android:layout_height="0dp"
        android:background="#F3764E"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitCenter"
            android:id="@+id/back"
            android:onClick="back"
            android:background="@android:color/transparent"
            app:layout_constraintWidth_percent="0.1"
            android:layout_marginStart="10dp"
            app:layout_constraintHeight_percent="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/ic_icn_back"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintStart_toEndOf="@id/back"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/add_friend"
            android:textSize="20sp"
            android:fontFamily="sans-serif"
            />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitCenter"
            android:id="@+id/qrcode"
            android:background="@android:color/transparent"
            app:layout_constraintWidth_percent="0.1"
            android:layout_marginEnd="10dp"
            app:layout_constraintHeight_percent="0.8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/qr"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/userqrcode"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/top"
        app:layout_constraintHeight_percent="0.55"
        android:visibility="gone"/>

    <me.dm7.barcodescanner.zxing.ZXingScannerView
        android:id="@+id/scan"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/top"
        app:layout_constraintHeight_percent="0.55"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_scan_qr_code_or_input_user_id"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="15dp"
        app:layout_constraintVertical_bias="0.7"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/userid"
        app:layout_constraintHeight_percent="0.0703"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.7"
        android:hint="@string/please_input_user_id"
        android:imeOptions="actionDone"
        android:singleLine="true"
        app:layout_constraintVertical_bias="0.8"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@android:color/transparent"/>

    <ImageButton
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/add"
        android:scaleType="fitXY"
        android:background="@android:color/transparent"
        app:layout_constraintWidth_percent="0.36"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintVertical_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/btn4_c"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addtext"
        app:layout_constraintTop_toTopOf="@id/add"
        app:layout_constraintStart_toStartOf="@id/add"
        app:layout_constraintEnd_toEndOf="@id/add"
        app:layout_constraintBottom_toBottomOf="@id/add"
        android:textColor="@android:color/white"
        android:text="@string/add_friend"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/adderrormsg"
        app:layout_constraintTop_toBottomOf="@id/add"
        app:layout_constraintStart_toStartOf="@id/add"
        app:layout_constraintEnd_toEndOf="@id/add"
        android:textColor="@android:color/holo_red_light"
        android:text="error"
        android:visibility="gone"
        />

</androidx.constraintlayout.widget.ConstraintLayout>