<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hk.edu.cuhk.ie.iems5722.a2_1155079374.MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/login"
        android:layout_height="match_parent"
        android:background="@mipmap/login">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.3"
            app:layout_constraintHeight_percent="0.15"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintVertical_bias="0.15"
            android:src="@drawable/message_icon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/instant_messager"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-black"
            app:layout_constraintTop_toBottomOf="@+id/icon"
            app:layout_constraintStart_toStartOf="@id/icon"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/username"
            app:layout_constraintHeight_percent="0.0703"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.7"
            app:layout_constraintHorizontal_bias="0.68"
            android:hint="@string/username"
            android:imeOptions="actionDone"
            android:singleLine="true"
            app:layout_constraintVertical_bias="0.66125"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@android:color/transparent"/>

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/register"
            android:scaleType="fitXY"
            android:background="@android:color/transparent"
            app:layout_constraintWidth_percent="0.36"
            app:layout_constraintHeight_percent="0.07"
            app:layout_constraintVertical_bias="0.55"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/btn4_c"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/registertext"
            app:layout_constraintTop_toTopOf="@id/register"
            app:layout_constraintStart_toStartOf="@id/register"
            app:layout_constraintEnd_toEndOf="@id/register"
            app:layout_constraintBottom_toBottomOf="@id/register"
            android:textColor="@android:color/white"
            android:text="@string/register"
            />

        <EditText
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/password"
            app:layout_constraintHeight_percent="0.0703"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.68"
            app:layout_constraintWidth_percent="0.7"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.77"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@android:color/transparent"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/login_btn"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintWidth_percent="0.75"
            android:background="@android:color/transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.92"/>

        <TextView
            android:visibility="gone"
            android:id="@+id/errormessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/holo_red_light"
            android:textSize="15sp"
            android:fontFamily="sans-serif-condensed-light"
            app:layout_constraintTop_toBottomOf="@+id/login_btn"
            app:layout_constraintStart_toStartOf="@id/login_btn"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/registerpanel"
            android:visibility="gone"
            app:layout_constraintHeight_percent="0.47"
            android:background="@android:color/white"
            app:layout_constraintWidth_percent="0.85"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.9">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintVertical_bias="0.1"
                app:layout_constraintHorizontal_bias="0.2"
                android:textStyle="bold"
                android:textSize="30sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textColor="#F3764E"
                android:text="@string/register"
                />

            <EditText
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/regusername"
                app:layout_constraintHeight_percent="0.15"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintWidth_percent="0.7"
                app:layout_constraintHorizontal_bias="0.5"
                android:hint="@string/username"
                android:imeOptions="actionDone"
                android:singleLine="true"
                app:layout_constraintVertical_bias="0.3"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@android:color/transparent"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/regpassword"
                app:layout_constraintHeight_percent="0.15"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintWidth_percent="0.7"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:inputType="textPassword"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@android:color/transparent"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/confirmpassword"
                app:layout_constraintHeight_percent="0.15"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintWidth_percent="0.7"
                android:hint="@string/confirm_password"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:inputType="textPassword"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.7"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@android:color/transparent"/>

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/reg"
                android:scaleType="fitXY"
                android:background="@android:color/transparent"
                app:layout_constraintWidth_percent="0.5"
                app:layout_constraintHeight_percent="0.15"
                app:layout_constraintVertical_bias="0.9"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/btn4_c"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/regtext"
                app:layout_constraintTop_toTopOf="@id/reg"
                app:layout_constraintStart_toStartOf="@id/reg"
                app:layout_constraintEnd_toEndOf="@id/reg"
                app:layout_constraintBottom_toBottomOf="@id/reg"
                android:textColor="@android:color/white"
                android:text="@string/register"
                />

            <TextView
                android:visibility="gone"
                android:id="@+id/regerrormessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/holo_red_light"
                android:textSize="15sp"
                android:fontFamily="sans-serif-condensed-light"
                app:layout_constraintTop_toBottomOf="@+id/reg"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/chatroomselectpanel"
        android:visibility="gone">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#F3764E"
        android:id="@+id/topbar"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitCenter"
            android:id="@+id/select"
            android:onClick="logout"
            android:background="@android:color/transparent"
            app:layout_constraintWidth_percent="0.1"
            android:layout_marginStart="10dp"
            app:layout_constraintHeight_percent="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/list"/>
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitCenter"
            android:id="@+id/addfriend"
            android:background="@android:color/transparent"
            app:layout_constraintWidth_percent="0.1"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintHeight_percent="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/addfriend"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintStart_toEndOf="@id/select"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/iems5722"
            android:textSize="20sp"
            android:fontFamily="sans-serif"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topbar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/chatroomlist"
        android:orientation="vertical"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>